--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
   <header>
     <h1>Pedro Benetton</h1>
-    <p>Software Developer • Python • Flask • React</p>
+    <p>Software Developer • MANACÁ Beamline • Sirius</p>
   </header>
 
   <main>
@@ -16,17 +16,23 @@
       <h2>Projects</h2>
 
       <div class="project">
-        <h3>MXCuBE / MANACÁ Web App</h3>
-        <p>Flask + React application for protein crystallography data visualization.</p>
-        <a href="https://github.com/your-username/repo-name" target="_blank">
-          View on GitHub
+        <h3>MXCuBE: Em software desenvolvido em colaboração por dezenas de síncrotrons pelo mundo, utilizado para o controle experimental de cristalografia de proteínas em síncrotrons.</h3>
+        <p></p>
+        <a href="https://github.com/cnpem/mxcubecore" target="_blank">
+          mxcubecore
+        </a>
+	<a href="https://github.com/cnpem/mxcubeweb" target="_blank">
+          mxcubeweb - frontend
+        </a>
+	<a href="https://github.com/cnpem/mxcubeweb-lnls" target="_blank">
+          config files
         </a>
       </div>
 
       <div class="project">
-        <h3>OpenCV Multi-Camera Stream</h3>
-        <p>Flask backend streaming multiple cameras using OpenCV.</p>
-        <a href="https://github.com/your-username/another-repo" target="_blank">
+        <h3>arara - Analisador de Reflexões de Aquisições de Raios-X</h3>
+        <p></p>
+        <a href="https://github.com/cnpem/arara" target="_blank">
           View on GitHub
         </a>
       </div>
