--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
       <h2>Projects</h2>
 
       <div class="project">
-        <h3>MXCuBE: Em software desenvolvido em colaboração por dezenas de síncrotrons pelo mundo, utilizado para o controle experimental de cristalografia de proteínas em síncrotrons.</h3>
-        <p></p>
+        <h3>MXCuBE</h3>
+        <p>Um software desenvolvido em colaboração por dezenas de síncrotrons pelo mundo, utilizado para o controle experimental de cristalografia de proteínas em síncrotrons</p>
         <a href="https://github.com/cnpem/mxcubecore" target="_blank">
           mxcubecore
         </a>
@@ -31,7 +31,7 @@
 
       <div class="project">
         <h3>arara - Analisador de Reflexões de Aquisições de Raios-X</h3>
-        <p></p>
+        <p>Uma aplicação web que visualiza e pré-processa os dados coletados pelo detector Pilatus da linha de luz MANACÁ</p>
         <a href="https://github.com/cnpem/arara" target="_blank">
           View on GitHub
         </a>
