--- a/index.html
+++ b/index.html
@@ -17,15 +17,15 @@
 
       <div class="project">
         <h3>MXCuBE</h3>
-        <p>Um software desenvolvido em colaboração por dezenas de síncrotrons pelo mundo, utilizado para o controle experimental de cristalografia de proteínas em síncrotrons</p>
+        <p>Um software desenvolvido em colaboração por dezenas de síncrotrons pelo mundo, utilizado para o controle experimental de cristalografia de proteínas em síncrotrons. Se divide em 3 repositórios:</p>
         <a href="https://github.com/cnpem/mxcubecore" target="_blank">
           mxcubecore
         </a>
-	<br/>
+	<p></p>
 	<a href="https://github.com/cnpem/mxcubeweb" target="_blank">
           mxcubeweb - frontend
         </a>
-	<br/>
+	<p></p>
 	<a href="https://github.com/cnpem/mxcubeweb-lnls" target="_blank">
           config files
         </a>
