--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
         <a href="https://github.com/cnpem/mxcubecore" target="_blank">
           mxcubecore
         </a>
-	<p></p>
+	<br></br>
 	<a href="https://github.com/cnpem/mxcubeweb" target="_blank">
           mxcubeweb - frontend
         </a>
-	<p></p>
+	<br></br>
 	<a href="https://github.com/cnpem/mxcubeweb-lnls" target="_blank">
           config files
         </a>
@@ -35,7 +35,7 @@
         <h3>Arara - Analisador de Reflexões de Aquisições de Raios-X</h3>
         <p>Uma aplicação web que visualiza e pré-processa os dados coletados pelo detector Pilatus da linha de luz MANACÁ</p>
         <a href="https://github.com/cnpem/arara" target="_blank">
-          View on GitHub
+          Repositório
         </a>
       </div>
 
