--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
       <div class="project">
         <h3>Arara - Analisador de Reflexões de Aquisições de Raios-X</h3>
-        <p>Uma aplicação web que visualiza e pré-processa os dados coletados pelo detector Pilatus da linha de luz MANACÁ</p>
+        <p>Uma aplicação web que visualiza e pré-processa os dados coletados pelo detector Pilatus da linha de luz MANACÁ:</p>
         <a href="https://github.com/cnpem/arara" target="_blank">
           Repositório
         </a>
