--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
 <body>
   <header>
     <h1>Pedro Benetton</h1>
-    <p>Software Developer • MANACÁ Beamline • Sirius</p>
+    <p>Software Developer • Linha de Luz MANACÁ • Sirius • CNPEM</p>
   </header>
 
   <main>
     <section>
-      <h2>Projects</h2>
+      <h2>Projetos:</h2>
 
       <div class="project">
         <h3>MXCuBE</h3>
