--- a/index.html
+++ b/index.html
@@ -39,6 +39,14 @@
         </a>
       </div>
 
+      <div class="project">
+        <h3>cbf_spot_finder</h3>
+        <p>Um algoritmo em C que combina MPI e OpenMP para encontrar spots em padrões de cristalografia com alta eficiência:</p>
+        <a href="https://github.com/pedrobenetton/cbf_spot_finder" target="_blank">
+          Repositório
+        </a>
+      </div>
+
     </section>
   </main>
 
