--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
   <header>
     <h1>Pedro Benetton</h1>
-    <p>Software Developer • Linha de Luz MANACÁ • Sirius • CNPEM</p>
+    <h2>Software Developer • Linha de Luz MANACÁ • Sirius • CNPEM</h2>
   </header>
 
   <main>
